# Pluto

./: .gitignore  .gitmodules  BuildInDocker.sh  CHANGELOG.md  README.md  RvizConfiguration.rviz  ros2_ws.code-workspace
arduino_controller/: package.xml  setup.cfg  setup.py
arduino_controller/arduino_controller/: controller.py
compass/: package.xml  setup.py
compass/compass/: compassMain.py  test.py
compass_heading/: CMakeLists.txt  package.xml
compass_heading/src/: heading_publisher.cpp
controller/: package.xml  setup.py
controller/config/: ServoAndSpeed.yaml
controller/controller/: AutonomousNodeController.py  AutonomousNodeControllerHelperFunction.py  ControllerNode.py  HelpFunction.py  JoystickInterpreter.py
controller/launch/: controller_launch.py
coverage_area_interface/: CMakeLists.txt  package.xml
coverage_area_interface/action/: Selectarea.action
coverage_area_interface/srv/: LoadMap.srv  SelectSquare.srv
custom_msgs/: CMakeLists.txt
custom_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
custom_msgs/log/: latest_build
custom_msgs/msg/: WaypointMsg.msg
customize_global_planner/: CMakeLists.txt  package.xml
customize_global_planner/src/: costmap_2d_modified.cpp  costmap_2d_modified3.cpp  coverage.cpp  coverage3.cpp  planner.cpp
customize_local_planner/: package.xml  setup.cfg  setup.py
fake_gps_publisher/: package.xml  setup.cfg  setup.py
gps_filter/: package.xml  setup.cfg  setup.py
gps_filter/gps_filter/: filter.py
gps_offset/: package.xml  setup.cfg  setup.py
gps_velocity/: package.xml  setup.cfg  setup.py
image_filter/: package.xml  setup.py
image_yolo_filter/: CMakeLists.txt  package.xml
image_yolo_filter/src/: publish_filter_pointcloud.cpp  publish_filter_pointcloud.h  test.cpp
log/: latest_build
maestro_controller/: package.xml  setup.cfg  setup.py
moving_pid_controller/: package.xml  setup.cfg  setup.py
nav2_coverage_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
navigate_by_pose/: package.xml  setup.cfg  setup.py
odometry_calculation/: package.xml  setup.cfg  setup.py
pluto_launch/: package.xml  setup.cfg  setup.py
py_pubsub/: package.xml  setup.py
realsense_camera/: package.xml  setup.py
select_area/: package.xml  setup.cfg  setup.py
simulation_to_reality_converter/: package.xml  setup.cfg  setup.py
simulator/: package.xml  setup.py
splunk_logger/: package.xml  setup.cfg  setup.py
(+150 files in other folders)
