<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_yolo_filter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joeldushouyu@gmail.com">shouyu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>bboxes_ex_msgs</depend>
  <depend>message_filters</depend> 
  <depend>pcl_conversions</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
